--- a/ajite/ajite/Storyboards/Base.lproj/Main.storyboard
+++ b/ajite/ajite/Storyboards/Base.lproj/Main.storyboard
@@ -6,6 +6,11 @@
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="made.otf">
+            <string>MADESunflower</string>
+        </array>
+    </customFonts>
     <scenes>
         <!--Login VC-->
         <scene sceneID="tne-QT-ifu">
@@ -16,41 +21,33 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <userGuides>
                             <userLayoutGuide location="16" affinity="minX"/>
-                            <userLayoutGuide location="398" affinity="minX"/>
                         </userGuides>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background image" translatesAutoresizingMaskIntoConstraints="NO" id="i1h-vN-N7T">
                                 <rect key="frame" x="-12" y="-31" width="437" height="927"/>
                             </imageView>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Onb-IK-pcj">
-                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="Onb-IK-pcj">
+                                <rect key="frame" x="0.0" y="144" width="414" height="718"/>
                                 <subviews>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xWe-18-lMM">
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="applogo" translatesAutoresizingMaskIntoConstraints="NO" id="RaT-Yj-Q9w">
                                         <rect key="frame" x="0.0" y="8" width="414" height="128"/>
-                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="128" id="LEb-4m-kJC"/>
+                                            <constraint firstAttribute="height" constant="128" id="awl-qb-XjV"/>
                                         </constraints>
-                                    </view>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="41" translatesAutoresizingMaskIntoConstraints="NO" id="UFF-pV-Uz2">
-                                        <rect key="frame" x="0.0" y="144" width="414" height="251"/>
+                                    </imageView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="50" translatesAutoresizingMaskIntoConstraints="NO" id="UFF-pV-Uz2">
+                                        <rect key="frame" x="0.0" y="136" width="414" height="189"/>
                                         <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sign In" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XXR-8w-wt6">
-                                                <rect key="frame" x="16" y="8" width="382" height="43"/>
-                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="35"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ajite" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XXR-8w-wt6">
+                                                <rect key="frame" x="16" y="8" width="382" height="73"/>
+                                                <fontDescription key="fontDescription" name="MADESunflower" family="MADE Sunflower" pointSize="60"/>
                                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
                                                 <color key="shadowColor" white="0.67000000000000004" alpha="0.68214000355113635" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <size key="shadowOffset" width="2" height="1"/>
                                             </label>
-                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="O5p-Uh-UfH">
-                                                <rect key="frame" x="16" y="92" width="382" height="60"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="height" constant="60" id="iYv-M9-Dwu"/>
-                                                </constraints>
-                                            </view>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xOP-pP-LUR">
-                                                <rect key="frame" x="16" y="193" width="382" height="50"/>
+                                                <rect key="frame" x="16" y="131" width="382" height="50"/>
                                                 <color key="backgroundColor" red="0.75505012270000005" green="0.80368874290000003" blue="0.95296651119999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="50" id="v04-vh-r4b"/>
@@ -69,7 +66,7 @@
                                         <edgeInsets key="layoutMargins" top="8" left="16" bottom="8" right="16"/>
                                     </stackView>
                                     <view contentMode="scaleToFill" verticalHuggingPriority="200" translatesAutoresizingMaskIntoConstraints="NO" id="JLZ-m7-AMb">
-                                        <rect key="frame" x="0.0" y="403" width="414" height="407"/>
+                                        <rect key="frame" x="0.0" y="325" width="414" height="385"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     </view>
                                 </subviews>
@@ -80,10 +77,9 @@
                         <constraints>
                             <constraint firstItem="Onb-IK-pcj" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="BFz-xc-Gkk"/>
                             <constraint firstItem="i1h-vN-N7T" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="-12" id="Pxl-t3-DfH"/>
+                            <constraint firstItem="Onb-IK-pcj" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="100" id="XKM-93-nU8"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Onb-IK-pcj" secondAttribute="bottom" id="j0J-3R-jql"/>
                             <constraint firstAttribute="trailing" secondItem="i1h-vN-N7T" secondAttribute="trailing" constant="-11" id="jfJ-b8-5f6"/>
-                            <constraint firstItem="Onb-IK-pcj" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="mMP-xh-oli"/>
-                            <constraint firstItem="Onb-IK-pcj" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="o6v-PP-qBs"/>
                             <constraint firstItem="i1h-vN-N7T" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="-31" id="qNt-hg-sIT"/>
                             <constraint firstAttribute="bottom" secondItem="i1h-vN-N7T" secondAttribute="bottom" id="suJ-U8-XbP"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Onb-IK-pcj" secondAttribute="trailing" id="zPX-eR-HiB"/>
@@ -97,6 +93,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="applogo" width="210" height="297"/>
         <image name="background image" width="500" height="889"/>
     </resources>
 </document>
