--- a/ajite/ajite/Storyboards/Base.lproj/LaunchScreen.storyboard
+++ b/ajite/ajite/Storyboards/Base.lproj/LaunchScreen.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="retina5_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -12,52 +12,51 @@
             <objects>
                 <viewController id="01J-lp-oVM" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background image" id="MI6-Nk-Wzz">
-                                <rect key="frame" x="-131" y="-41" width="744" height="1184"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="applogo" translatesAutoresizingMaskIntoConstraints="NO" id="spM-2Y-bQs" userLabel="logo image">
-                                <rect key="frame" x="117" y="215" width="181" height="301"/>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" secondItem="spM-2Y-bQs" secondAttribute="height" multiplier="181:301" id="jBB-yp-GP9"/>
-                                </constraints>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background image" translatesAutoresizingMaskIntoConstraints="NO" id="oNK-b0-Q4K">
+                                <rect key="frame" x="0.0" y="-44" width="414" height="814"/>
                             </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="applogo-ajite" translatesAutoresizingMaskIntoConstraints="NO" id="dvA-m1-H0B">
-                                <rect key="frame" x="102" y="365" width="211" height="232"/>
+                                <rect key="frame" x="-76.666666666666686" y="252" width="567.33333333333337" height="232"/>
+                                <accessibility key="accessibilityConfiguration">
+                                    <accessibilityTraits key="traits" image="YES" notEnabled="YES"/>
+                                </accessibility>
                                 <constraints>
-                                    <constraint firstAttribute="width" secondItem="dvA-m1-H0B" secondAttribute="height" multiplier="211:232" id="p7t-lX-NLF"/>
+                                    <constraint firstAttribute="height" constant="232" id="aUg-or-hGw"/>
+                                    <constraint firstAttribute="width" constant="567" id="lz1-m5-Wkn"/>
+                                </constraints>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="applogo" translatesAutoresizingMaskIntoConstraints="NO" id="spM-2Y-bQs" userLabel="logo image">
+                                <rect key="frame" x="102" y="89.666666666666686" width="210" height="297"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <accessibility key="accessibilityConfiguration">
+                                    <accessibilityTraits key="traits" image="YES" notEnabled="YES"/>
+                                </accessibility>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="297" id="Kuq-sw-jqz"/>
+                                    <constraint firstAttribute="width" constant="210" id="TTD-SP-J2U"/>
                                 </constraints>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="dvA-m1-H0B" firstAttribute="centerX" secondItem="spM-2Y-bQs" secondAttribute="centerX" id="2jX-mz-Eah"/>
-                            <constraint firstItem="spM-2Y-bQs" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="117" id="30i-nG-Zbk"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="dvA-m1-H0B" secondAttribute="bottom" constant="265" id="Ccd-0o-j7A"/>
-                            <constraint firstItem="dvA-m1-H0B" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="102" id="CpR-bM-oWk"/>
-                            <constraint firstItem="dvA-m1-H0B" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="102" id="FiZ-yn-H9S"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="dvA-m1-H0B" secondAttribute="trailing" constant="101" id="H51-p0-cYz"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="spM-2Y-bQs" secondAttribute="bottom" constant="346" id="KZT-UZ-8jx"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="spM-2Y-bQs" secondAttribute="bottom" constant="346" id="VIq-Rh-LLu"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="spM-2Y-bQs" secondAttribute="trailing" constant="116" id="YVz-J0-WeX"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="dvA-m1-H0B" secondAttribute="bottom" constant="265" id="hUa-ev-QjR"/>
-                            <constraint firstItem="spM-2Y-bQs" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="171" id="m5e-2u-3Ys"/>
-                            <constraint firstItem="dvA-m1-H0B" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="321" id="mvo-Ce-8Js"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="spM-2Y-bQs" secondAttribute="trailing" constant="116" id="pXT-2R-hqL"/>
-                            <constraint firstItem="spM-2Y-bQs" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="117" id="rO2-ix-5to"/>
-                            <constraint firstItem="spM-2Y-bQs" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="171" id="ssd-gV-NZz"/>
-                            <constraint firstItem="dvA-m1-H0B" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="321" id="yW8-WA-hWc"/>
+                            <constraint firstItem="dvA-m1-H0B" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="0Kh-wX-KyB"/>
+                            <constraint firstItem="oNK-b0-Q4K" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="7fv-bB-mkW"/>
+                            <constraint firstItem="dvA-m1-H0B" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="7pU-dm-JGe"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="oNK-b0-Q4K" secondAttribute="trailing" id="Bb0-IR-lms"/>
+                            <constraint firstItem="spM-2Y-bQs" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" constant="-130" id="QrO-Ny-r9Y"/>
+                            <constraint firstItem="spM-2Y-bQs" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="Ygo-nN-MqK"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="oNK-b0-Q4K" secondAttribute="bottom" constant="-34" id="ac4-bX-4ht"/>
+                            <constraint firstItem="oNK-b0-Q4K" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="-44" id="rTj-Ie-O3G"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="52.173913043478265" y="375"/>
+            <point key="canvasLocation" x="52.173913043478265" y="373.66071428571428"/>
         </scene>
     </scenes>
     <resources>
